Initial commit: Set up Full Load project structure

--- a/web/index.html
+++ b/web/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
+  <!-- Base href is replaced by flutter tools on build -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="description" content="A new Flutter project.">
+
+  <!-- Force Flutter Web to use CanvasKit renderer -->
+  <meta name="flutter-web-renderer" content="canvaskit">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -31,6 +22,31 @@
 
   <title>johnny_app</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Ensure Flutter canvas fills page and accepts pointer events -->
+  <style>
+    html, body { height: 100%; margin: 0; }
+
+    /* The host element Flutter attaches to (names vary across engines) */
+    flutter-app,
+    #flutter_container,
+    #flt-glass-pane,
+    flutter-view {
+      width: 100% !important;
+      height: 100% !important;
+      position: relative;
+    }
+
+    /* Prevent any stray overlay from blocking clicks */
+    canvas { outline: none; }
+
+    /* Desktop-web hardening: semantics overlays shouldn't intercept clicks */
+    flt-semantics-placeholder,
+    .flt-semantics,
+    .flt-semantics-container {
+      pointer-events: none !important;
+    }
+  </style>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
